[gd_scene load_steps=30 format=3 uid="uid://bwlta6mv2bg45"]

[ext_resource type="Script" uid="uid://c2sn30movidck" path="res://scripts/overworld/cirno.gd" id="1_7scum"]
[ext_resource type="Texture2D" uid="uid://dqa0vkh75kguf" path="res://assets/cirno-walk.png" id="1_mjcn1"]
[ext_resource type="Resource" uid="uid://crnrqykb06qvm" path="res://resources/Inventory.tres" id="2_qsjrn"]
[ext_resource type="Script" uid="uid://781y04xhlelq" path="res://scripts/overworld/movement-component.gd" id="3_lm1go"]
[ext_resource type="Script" uid="uid://bmuowhti2qy1o" path="res://scripts/overworld/animation-component.gd" id="4_a5a0l"]
[ext_resource type="Texture2D" uid="uid://c6nkxfkgw3bvp" path="res://assets/hitbox-dot.png" id="6_5j1rb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ubwrc"]
atlas = ExtResource("1_mjcn1")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmqee"]
atlas = ExtResource("1_mjcn1")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kvab"]
atlas = ExtResource("1_mjcn1")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj8ml"]
atlas = ExtResource("1_mjcn1")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7o0c"]
atlas = ExtResource("1_mjcn1")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxlgf"]
atlas = ExtResource("1_mjcn1")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr5k8"]
atlas = ExtResource("1_mjcn1")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q66wx"]
atlas = ExtResource("1_mjcn1")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1o78"]
atlas = ExtResource("1_mjcn1")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8yro"]
atlas = ExtResource("1_mjcn1")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6df23"]
atlas = ExtResource("1_mjcn1")
region = Rect2(96, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j2gp"]
atlas = ExtResource("1_mjcn1")
region = Rect2(112, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l681"]
atlas = ExtResource("1_mjcn1")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pryjp"]
atlas = ExtResource("1_mjcn1")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4tng"]
atlas = ExtResource("1_mjcn1")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15xe1"]
atlas = ExtResource("1_mjcn1")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7scum"]
atlas = ExtResource("1_mjcn1")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm1go"]
atlas = ExtResource("1_mjcn1")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5a0l"]
atlas = ExtResource("1_mjcn1")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsjrn"]
atlas = ExtResource("1_mjcn1")
region = Rect2(112, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lj8ml"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubwrc")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmqee")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kvab")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj8ml")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7o0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxlgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr5k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q66wx")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1o78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8yro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6df23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j2gp")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pryjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4tng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15xe1")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7scum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5a0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsjrn")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5a0l"]
size = Vector2(7.5, 10.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hy2v"]
size = Vector2(1.25, 1.25)

[node name="Cirno" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "animation_component", "hitbox_dot")]
modulate = Color(1.2237577, 1.175274, 1.175274, 1)
z_index = 2
collision_priority = 4.0
script = ExtResource("1_7scum")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
inventory = ExtResource("2_qsjrn")
spawn_point = Vector2(256, 256)
hitbox_dot = NodePath("hitbox-dot")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_lj8ml")
animation = &"idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 512
position = Vector2(0.25, 10.25)
shape = SubResource("RectangleShape2D_a5a0l")
debug_color = Color(0.89451784, 0.28257188, 0.39729515, 0.41960785)

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_lm1go")
actor = NodePath("..")
slow_speed = 200.0
fast_speed = 450.0

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("anim")]
script = ExtResource("4_a5a0l")
anim = NodePath("../AnimatedSprite2D")

[node name="hitbox" type="Area2D" parent="."]
light_mask = 4
visibility_layer = 2
position = Vector2(0, 4)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
scale = Vector2(1.9, 1.9)
shape = SubResource("RectangleShape2D_3hy2v")
debug_color = Color(0.98672384, 0, 0.32546666, 0.41960785)

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="hitbox-dot" type="Sprite2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_5j1rb")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
